<resources>
    <string name="app_name">SteamMarketManager</string>
    <string name="button_name">Make request</string>
    <string name="main_activity_name">STEAM</string>
    <string name="result_activity_name">Results</string>
    <string name="hint_success">Success</string>
    <string name="hint_lowest_price">Lowest price</string>
    <string name="hint_volume">Volume</string>
    <string name="hint_median_price">Median price</string>
    <string name="currency">Currency</string>
    <string name="getURLButton_name">Get URL</string>
    <string name="hint_url">generate new url</string>
    <string name="hint_time">time</string>
    <string name="make_req_pr_bar">makeRequestProgressBar</string>
    <string name="hint_progress">0%</string>
    <string name="hint_item_data">Item Data</string>
    <string name="hint_item_url">Item Url</string>
    <string name="make_time_request_name">Make timer request</string>
    <string name="button_cancel_name">CANCEL TIMER</string>
    <string name="hint_timer">timer progress</string>
</resources>
