<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:id="@+id/buttonLayout"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:orientation="vertical"
        android:gravity="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <Button
            android:id="@+id/getURLButton"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:background="@drawable/cool_button_background"
            android:text="@string/getURLButton_name"
            android:textColor="#616161"
            android:layout_marginBottom="30dp"/>

        <Button
            android:id="@+id/makeRequestButton"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:background="@drawable/cool_button_background"
            android:text="@string/button_name"
            android:textColor="#616161" />

        <Button
            android:id="@+id/makeTimerRequestButton"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:background="@drawable/cool_button_background"
            android:text="@string/make_time_request_name"
            android:textColor="#616161"
            android:layout_marginTop="30dp"/>

    </LinearLayout>

    <TextView
        android:id="@+id/url"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@android:color/darker_gray"
        android:textAlignment="center"
        android:textColor="@android:color/black"
        android:hint="@string/hint_url"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.15" />

    <RelativeLayout
        android:id="@+id/progress_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/buttonLayout">

        <ProgressBar
            android:id="@+id/makeRequestProgressBar"
            android:layout_width="56dp"
            android:layout_height="56dp"
            android:layout_centerInParent="true"
            android:visibility="invisible" />

        <TextView
            android:id="@+id/tv_makeRequestProgressBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:textColor="@android:color/black"
            android:hint="@string/hint_progress"
            android:gravity="center"
            android:visibility="invisible"/>
    </RelativeLayout>

</androidx.constraintlayout.widget.ConstraintLayout>