<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ResultActivity"
    android:orientation="vertical"
    android:gravity="center">

        <TextView
            android:id="@+id/dataException"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/medianPrice"
            android:textAlignment="center"
            android:textColor="@android:color/black"
            android:background="@drawable/market_item_background"
            android:textAppearance="?android:attr/textAppearanceLarge"/>

        <TextView
            android:id="@+id/success"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/hint_success"
            android:textAlignment="center"
            android:textColor="@android:color/black"
            android:background="@drawable/market_item_background"
            android:textAppearance="?android:attr/textAppearanceLarge"/>

        <TextView
            android:id="@+id/lowestPrice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/success"
            android:hint="@string/hint_lowest_price"
            android:textAlignment="center"
            android:textColor="@android:color/black"
            android:background="@drawable/market_item_background"
            android:textAppearance="?android:attr/textAppearanceLarge"/>

        <TextView
            android:id="@+id/volume"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/lowestPrice"
            android:hint="@string/hint_volume"
            android:textAlignment="center"
            android:textColor="@android:color/black"
            android:background="@drawable/market_item_background"
            android:textAppearance="?android:attr/textAppearanceLarge"/>

        <TextView
            android:id="@+id/medianPrice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/volume"
            android:hint="@string/hint_median_price"
            android:textAlignment="center"
            android:textColor="@android:color/black"
            android:background="@drawable/market_item_background"
            android:textAppearance="?android:attr/textAppearanceLarge"/>

        <TextView
            android:id="@+id/currency"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/medianPrice"
            android:hint="@string/currency"
            android:textAlignment="center"
            android:textColor="@android:color/black"
            android:background="@drawable/market_item_background"
            android:textAppearance="?android:attr/textAppearanceLarge"/>

        <TextView
            android:id="@+id/time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/medianPrice"
            android:hint="@string/hint_time"
            android:textAlignment="center"
            android:textColor="@android:color/black"
            android:background="@drawable/market_item_background"
            android:textAppearance="?android:attr/textAppearanceLarge"/>

        <TextView
            android:id="@+id/timerProgress"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/medianPrice"
            android:hint="timer progress"
            android:textAlignment="center"
            android:textColor="@android:color/black"
            android:layout_marginTop="50dp"
            android:visibility="invisible"/>

        <Button
            android:id="@+id/cancelTimerButton"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:background="@drawable/cool_button_background"
            android:text="CANCEL TIMER"
            android:textColor="#616161"
            android:layout_marginTop="10dp"
            android:visibility="invisible"/>

</androidx.appcompat.widget.LinearLayoutCompat>